// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertDialog   in "constrained" intent, action button should be disabled by default 1`] = `
<div
  aria-describedby="radix-:r8:"
  aria-labelledby="radix-:r7:"
  class="absolute inset-1/2 -translate-x-1/2 -translate-y-3/4 h-fit w-[640px] bg-white p-6 rounded-lg space-y-4"
  data-state="open"
  id="radix-:r6:"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-row justify-between"
  >
    <h2
      class="font-semibold"
      id="radix-:r7:"
    >
      Test Alert Dialog title
    </h2>
    <div
      class="p-2 block hover:bg-slate4 rounded-sm focus:outline focus:outline-slate7 active:bg-slate5"
    >
      <svg
        class="hover:cursor-pointer"
        fill="none"
        height="15"
        viewBox="0 0 15 15"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <p
    id="radix-:r8:"
  >
    Test Alert Dialog description
  </p>
  <div
    class="flex flex-col"
  >
    <div
      class="mt-4 text-gray11"
    >
      To continue, enter the phrase
      <span
        class="font-bold text-black"
      >
         test action phrase
      </span>
    </div>
    <input
      class="w-full outline outline-1 outline-gray10 px-2 py-1 my-4"
      placeholder="test action phrase"
      type="text"
    />
  </div>
  <div
    class="flex flex-row justify-end gap-x-6"
  >
    <button
      class="focus:outline text-slate11 border-slate9 border-[1px] hover:text-slate12 hover:shadow-sm hover:shadow-sand8 hover:bg-slate3 hover:border-slate10 hover:ring-0 focus:bg-slate4 active:bg-slate5 px-4 py-1 w-fit rounded-md"
      type="button"
    >
      Alert Dialog Close
    </button>
    <button
      class="focus:outline text-gray8 outline-gray6 outline outline-2 px-4 py-1 w-fit rounded-md"
      disabled=""
      type="button"
    >
      Alert Dialog Action
    </button>
  </div>
</div>
`;

exports[`AlertDialog   in "constrained" intent, action button should be disabled by default 2`] = `
<button
  class="focus:outline text-gray8 outline-gray6 outline outline-2 px-4 py-1 w-fit rounded-md"
  disabled=""
  type="button"
>
  Alert Dialog Action
</button>
`;

exports[`AlertDialog   in "constrained" intent, action button should be enabled when input value matches action text 1`] = `
<button
  class="focus:outline text-red11 bg-red4 hover:bg-red5 active:bg-red6  focus:outline-red7 px-4 py-1 w-fit rounded-md"
  type="button"
>
  Alert Dialog Action
</button>
`;

exports[`AlertDialog   in "constrained" intent, action button should be enabled when input value matches action text 2`] = `
<div
  aria-describedby="radix-:rb:"
  aria-labelledby="radix-:ra:"
  class="absolute inset-1/2 -translate-x-1/2 -translate-y-3/4 h-fit w-[640px] bg-white p-6 rounded-lg space-y-4"
  data-state="open"
  id="radix-:r9:"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-row justify-between"
  >
    <h2
      class="font-semibold"
      id="radix-:ra:"
    >
      Test Alert Dialog title
    </h2>
    <div
      class="p-2 block hover:bg-slate4 rounded-sm focus:outline focus:outline-slate7 active:bg-slate5"
    >
      <svg
        class="hover:cursor-pointer"
        fill="none"
        height="15"
        viewBox="0 0 15 15"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <p
    id="radix-:rb:"
  >
    Test Alert Dialog description
  </p>
  <div
    class="flex flex-col"
  >
    <div
      class="mt-4 text-gray11"
    >
      To continue, enter the phrase
      <span
        class="font-bold text-black"
      >
         test action phrase
      </span>
    </div>
    <input
      class="w-full outline outline-1 outline-gray10 px-2 py-1 my-4"
      input="test action phrase"
      placeholder="test action phrase"
      type="text"
    />
  </div>
  <div
    class="flex flex-row justify-end gap-x-6"
  >
    <button
      class="focus:outline text-slate11 border-slate9 border-[1px] hover:text-slate12 hover:shadow-sm hover:shadow-sand8 hover:bg-slate3 hover:border-slate10 hover:ring-0 focus:bg-slate4 active:bg-slate5 px-4 py-1 w-fit rounded-md"
      type="button"
    >
      Alert Dialog Close
    </button>
    <button
      class="focus:outline text-red11 bg-red4 hover:bg-red5 active:bg-red6  focus:outline-red7 px-4 py-1 w-fit rounded-md"
      type="button"
    >
      Alert Dialog Action
    </button>
  </div>
</div>
`;

exports[`AlertDialog  should render "constrained" intent 1`] = `
<div
  aria-describedby="radix-:r5:"
  aria-labelledby="radix-:r4:"
  class="absolute inset-1/2 -translate-x-1/2 -translate-y-3/4 h-fit w-[640px] bg-white p-6 rounded-lg space-y-4"
  data-state="open"
  id="radix-:r3:"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-row justify-between"
  >
    <h2
      class="font-semibold"
      id="radix-:r4:"
    >
      Test Alert Dialog title
    </h2>
    <div
      class="p-2 block hover:bg-slate4 rounded-sm focus:outline focus:outline-slate7 active:bg-slate5"
    >
      <svg
        class="hover:cursor-pointer"
        fill="none"
        height="15"
        viewBox="0 0 15 15"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <p
    id="radix-:r5:"
  >
    Test Alert Dialog description
  </p>
  <div
    class="flex flex-col"
  >
    <div
      class="mt-4 text-gray11"
    >
      To continue, enter the phrase
      <span
        class="font-bold text-black"
      >
         test action phrase
      </span>
    </div>
    <input
      class="w-full outline outline-1 outline-gray10 px-2 py-1 my-4"
      placeholder="test action phrase"
      type="text"
    />
  </div>
  <div
    class="flex flex-row justify-end gap-x-6"
  >
    <button
      class="focus:outline text-slate11 border-slate9 border-[1px] hover:text-slate12 hover:shadow-sm hover:shadow-sand8 hover:bg-slate3 hover:border-slate10 hover:ring-0 focus:bg-slate4 active:bg-slate5 px-4 py-1 w-fit rounded-md"
      type="button"
    >
      Alert Dialog Close
    </button>
    <button
      class="focus:outline text-gray8 outline-gray6 outline outline-2 px-4 py-1 w-fit rounded-md"
      disabled=""
      type="button"
    >
      Alert Dialog Action
    </button>
  </div>
</div>
`;

exports[`AlertDialog  should render "constrained" intent 2`] = `
<input
  class="w-full outline outline-1 outline-gray10 px-2 py-1 my-4"
  placeholder="test action phrase"
  type="text"
/>
`;

exports[`AlertDialog  should render "default" intent 1`] = `
<div
  aria-describedby="radix-:r2:"
  aria-labelledby="radix-:r1:"
  class="absolute inset-1/2 -translate-x-1/2 -translate-y-3/4 h-fit w-[640px] bg-white p-6 rounded-lg space-y-4"
  data-state="open"
  id="radix-:r0:"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-row justify-between"
  >
    <h2
      class="font-semibold"
      id="radix-:r1:"
    >
      Test Alert Dialog title
    </h2>
    <div
      class="p-2 block hover:bg-slate4 rounded-sm focus:outline focus:outline-slate7 active:bg-slate5"
    >
      <svg
        class="hover:cursor-pointer"
        fill="none"
        height="15"
        viewBox="0 0 15 15"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <p
    id="radix-:r2:"
  >
    Test Alert Dialog description
  </p>
  <div
    class="flex flex-row justify-end gap-x-6"
  >
    <button
      class="focus:outline text-slate11 border-slate9 border-[1px] hover:text-slate12 hover:shadow-sm hover:shadow-sand8 hover:bg-slate3 hover:border-slate10 hover:ring-0 focus:bg-slate4 active:bg-slate5 px-4 py-1 w-fit rounded-md"
      type="button"
    >
      Alert Dialog Close
    </button>
    <button
      class="focus:outline text-red11 bg-red4 hover:bg-red5 active:bg-red6  focus:outline-red7 px-4 py-1 w-fit rounded-md"
      type="button"
    >
      Alert Dialog Action
    </button>
  </div>
</div>
`;
